--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         .game-icon {
             font-size: 50px;
             margin-bottom: 10px;
+            color: #6aaa64;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: bold;
         }
 
         .game-title {
@@ -90,13 +93,13 @@
 
     <header>
         <h1>My Playground</h1>
-        <p class="subtitle">A collection of small, fun web experiments.</p>
+        <p class="subtitle">A collection of my small, fun web stuff.</p>
     </header>
 
     <div class="game-grid">
         <a href="Wordle/index.html" class="game-card">
-            <div class="game-icon">🟩</div>
-            <span class="game-title">Wordle Clone</span>
+            <div class="game-icon">W</div>
+            <span class="game-title">Wordle</span>
             <p class="game-desc">Guess the hidden 5-letter word in 6 tries.</p>
         </a>
 
