--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
 
     <header>
-        <h1>My Playground</h1>
+        <h1>Hop's Fun Stuff!</h1>
         <p class="subtitle">A collection of my small, fun web stuff.</p>
     </header>
 
